--- a/Brainf_ck-sharp.UWP/UserControls/Flyouts/IDERunResultFlyout.xaml
+++ b/Brainf_ck-sharp.UWP/UserControls/Flyouts/IDERunResultFlyout.xaml
@@ -7,9 +7,9 @@
     xmlns:templateSelectors="using:Brainf_ck_sharp_UWP.TemplateSelectors"
     xmlns:flyouts="using:Brainf_ck_sharp_UWP.UserControls.Flyouts"
     xmlns:attached="using:Brainf_ck_sharp_UWP.AttachedProperties"
-    xmlns:dataTemplates="using:Brainf_ck_sharp_UWP.UserControls.DataTemplates"
     xmlns:converters="using:Brainf_ck_sharp_UWP.Converters"
     xmlns:ideResultHeaders="using:Brainf_ck_sharp_UWP.UserControls.DataTemplates.IDEResultHeaders"
+    xmlns:customControls="using:Brainf_ck_sharp_UWP.UserControls.CustomControls"
     mc:Ignorable="d"
     d:DesignHeight="300"
     d:DesignWidth="400">
@@ -61,7 +61,7 @@
 
         <!--Stop position-->
         <DataTemplate x:Key="StopPositionTemplate">
-            <dataTemplates:ErrorCharacterTemplate 
+            <customControls:ErrorCharacterDisplayControl 
                 HorizontalAlignment="Left"
                 Margin="12,8,16,4"
                 Height="40"
@@ -110,8 +110,16 @@
 
     <!--Root grid-->
     <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="Auto"/>
+        </Grid.RowDefinitions>
+        
+        
+        <!--Main content-->
         <SemanticZoom Style="{StaticResource SemanticZoomCustomStyle}"
-                      x:Name="ZoomControl">
+                      x:Name="ZoomControl"
+                      Grid.ColumnSpan="2">
             <SemanticZoom.ZoomedInView>
 
                 <!--ZoomedInView-->
@@ -137,5 +145,58 @@
                           ItemTemplate="{StaticResource ZoomedOutDefaultHeaderTemplate}"/>
             </SemanticZoom.ZoomedOutView>
         </SemanticZoom>
+
+        <!--Breakpoints control buttons-->
+        <Grid 
+            Grid.Row="1"
+            Visibility="Collapsed">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+            
+            <!--Continue-->
+            <customControls:IDESessionBreakpointOptionControl
+                Height="60"
+                Title="Continue"
+                x:Uid="ContinueButton">
+                <customControls:IDESessionBreakpointOptionControl.IconContent>
+                    <Grid>
+                        <Polygon 
+                            Points="0,0 0,18.75 15,9.375" 
+                            Stroke="DarkGreen" 
+                            Fill="Green" 
+                            VerticalAlignment="Center"/>
+                    </Grid>
+                </customControls:IDESessionBreakpointOptionControl.IconContent>
+            </customControls:IDESessionBreakpointOptionControl>
+            
+            <!--Skip-->
+            <customControls:IDESessionBreakpointOptionControl
+                Grid.Column="1"
+                Height="60"
+                Title="Skip"
+                x:Uid="SkipButton">
+                <customControls:IDESessionBreakpointOptionControl.IconContent>
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*"/>
+                            <ColumnDefinition Width="*"/>
+                        </Grid.ColumnDefinitions>
+                        <Polygon 
+                            Points="0,0 0,18.75 12,9.375" 
+                            Stroke="DarkGreen" 
+                            Fill="#FF4F824C" 
+                            VerticalAlignment="Center"/>
+                        <Polygon 
+                            Grid.Column="1"
+                            Points="0,0 0,18.75 12,9.375" 
+                            Stroke="DarkGreen" 
+                            Fill="#FF4F824C" 
+                            VerticalAlignment="Center"/>
+                    </Grid>
+                </customControls:IDESessionBreakpointOptionControl.IconContent>
+            </customControls:IDESessionBreakpointOptionControl>
+        </Grid>
     </Grid>
 </UserControl>
