Fixed converter value for > 9 indented loops

--- a/Brainf_ck-sharp.UWP/Views/IDEView.xaml
+++ b/Brainf_ck-sharp.UWP/Views/IDEView.xaml
@@ -51,7 +51,7 @@
                     <TextBlock
                         VerticalAlignment="Center"
                         HorizontalAlignment="Center"
-                        Text="{Binding Depth, Converter={StaticResource DepthDigitCOnverter}, FallbackValue=•}"
+                        Text="{Binding Depth, Converter={StaticResource DepthDigitCOnverter}, ConverterParameter=•}"
                         IsTextScaleFactorEnabled="False"
                         FontSize="8"
                         Foreground="SlateGray"
