--- a/Brainf_ck-sharp.UWP/Styles/TextStyles.xaml
+++ b/Brainf_ck-sharp.UWP/Styles/TextStyles.xaml
@@ -291,18 +291,8 @@
                                 BorderThickness="{TemplateBinding BorderThickness}"
                                 Grid.ColumnSpan="2"
                                 Grid.RowSpan="1" />
-                        <ContentPresenter x:Name="HeaderContentPresenter"
-                                          x:DeferLoadStrategy="Lazy"
-                                          Visibility="Collapsed"
-                                          Grid.Row="0"
-                                          Foreground="{ThemeResource TextControlHeaderForeground}"
-                                          Margin="0,0,0,8"
-                                          Grid.ColumnSpan="2"
-                                          Content="{TemplateBinding Header}"
-                                          ContentTemplate="{TemplateBinding HeaderTemplate}"
-                                          FontWeight="Normal" />
-                        <ScrollViewer x:Name="ContentElement"
-                                      Grid.Row="1"
+                        <ScrollViewer Grid.Row="1"
+                                      x:Name="ContentScroller"
                                       HorizontalScrollMode="{TemplateBinding ScrollViewer.HorizontalScrollMode}"
                                       HorizontalScrollBarVisibility="{TemplateBinding ScrollViewer.HorizontalScrollBarVisibility}"
                                       VerticalScrollMode="{TemplateBinding ScrollViewer.VerticalScrollMode}"
@@ -311,10 +301,13 @@
                                       IsVerticalRailEnabled="{TemplateBinding ScrollViewer.IsVerticalRailEnabled}"
                                       IsDeferredScrollingEnabled="{TemplateBinding ScrollViewer.IsDeferredScrollingEnabled}"
                                       Margin="{TemplateBinding BorderThickness}"
-                                      Padding="{TemplateBinding Padding}"
                                       IsTabStop="False"
                                       ZoomMode="Disabled"
-                                      AutomationProperties.AccessibilityView="Raw" />
+                                      AutomationProperties.AccessibilityView="Raw">
+                            <ContentPresenter
+                                x:Name="ContentElement"
+                                Margin="{TemplateBinding Padding}"/>
+                        </ScrollViewer>
                         <ContentControl x:Name="PlaceholderTextContentPresenter"
                                         Grid.Row="1"
                                         Foreground="{ThemeResource TextControlPlaceholderForeground}"
