Added ability to load a selected source code

--- a/Brainf_ck-sharp.UWP/UserControls/Flyouts/LocalSourceCodesBrowserFlyout.xaml
+++ b/Brainf_ck-sharp.UWP/UserControls/Flyouts/LocalSourceCodesBrowserFlyout.xaml
@@ -30,7 +30,8 @@
                     ItemContainerStyle="{StaticResource ListViewItemWithoutPointerVisualStates}"
                     HorizontalAlignment="Stretch"
                     VerticalAlignment="Stretch"
-                    IsItemClickEnabled="True">
+                    IsItemClickEnabled="True"
+                    ItemClick="ListViewBase_OnItemClick">
                     <ListView.ItemTemplate>
                         <DataTemplate>
                             <dataTemplates:SavedSourceCodeTemplate SourceCode="{Binding}"/>
